Fixed aligning in the example

--- a/example/css/country.css
+++ b/example/css/country.css
@@ -2,6 +2,7 @@
     all: initial;
     background-color: rgba(0, 0, 0, .05);
     border-radius: 5px;
+    display: block;
 }
 
 * {
@@ -48,7 +49,6 @@ ul li {
 }
 
 ul li a {
-    display: inline-block;
     padding: 0 .25vmin;
     color: black;
     transition: color .5s;
@@ -57,6 +57,7 @@ ul li a {
 
 ul li.title {
     color: rgba(0, 0, 0, .35);
+    padding-right: 2px;
 }
 
 ul li a:hover {
